# server-manager

./: .gitignore  LICENSE  README.md
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.scss  App.tsx  _scrollbar.scss  index.scss
app/src/components/: Dashboard.scss  Dashboard.tsx  ServerConsole.scss  ServerConsole.tsx  ServerDetails.scss  ServerDetails.tsx  ServerList.scss  ServerList.tsx  ServerTabs.scss  ServerTabs.tsx  ServerView.scss  ServerView.tsx
app/src/modals/: client.ts  message.ts  server.ts  server_commands.ts
app/src/svg/: SorterIcon.tsx  UserIcon.tsx
app/src/websocket/: connection.ts  connection_service.ts
frontend/: index.js  package-lock.json  package.json
frontend/static/script/: index.js  init_creds.js  input.js  server.js  stats.js  ws.js
frontend/static/style/: server.css  style.css
frontend/views/: index.pug  server.pug
frontend/views/partials/: base.pug
old_frontend/: index.js  package-lock.json  package.json
old_frontend/static/script/: index.js
old_frontend/static/style/: index.css
old_frontend/views/: init_creds.pug  manager.pug
old_frontend/views/partials/: base.pug
websocket/: Cargo.toml
websocket/src/: commands.rs  communicator.rs  lobby.rs  main.rs  messages.rs  server.rs  start_connection.rs  state.rs  ws.rs
websocket/src/commands/: command.rs  connect_server.rs  create_server.rs  list_servers.rs  mod.rs  remove_server.rs  server_connection.rs  server_log.rs  set_server.rs  status.rs  update_server.rs
websocket/src/communicators/: csgo.rs  minecraft.rs  mod.rs
