[package]
name = "websocket"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-actors = "3"
actix = "0.10.0"
uuid = { version = "0.8", features = ["v4", "serde"] } # uuid's fit well in this context.