[package]
name = "websocket"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
base64 = "0.13.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.5.0", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "0.13.0"

futures = {version = "0.3", features = ["executor"]}
futures-util = "0.3.14"

async-trait = "0.1.50"

uuid = { version = "0.8", features = ["v4", "serde"] } # uuid's fit well in this context.

rcon = "0"