[package]
name = "websocket"
version = "0.1.0"
authors = ["Alan Panayotov <alanpanayotov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
base64 = "0.13.0"
rand = "0.8.3"

chrono = "0.4.19"

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

tokio = { version = "1.5.0", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["rustls-tls"] }
tungstenite = "0.13.0"
tokio-rustls = "0.22.0"

futures = {version = "0.3", features = ["executor"]}
futures-util = "0.3.14"
futures-channel = "0.3.14"

lazy_static = "1.4.0"
async-trait = "0.1.50"

strum = { version = "0.21", features = ["derive"] }

uuid = { version = "0.8", features = ["v4", "serde"] } # uuid's fit well in this context.
jwt = "0.14.0"
hmac = "0.11.0"
sha2 = "0.9.5"
rcon = "0"